Fix F & L spacing

--- a/css/oretechcustom.css
+++ b/css/oretechcustom.css
@@ -12,6 +12,11 @@ License URI:  http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain:  yootheme-child-theme
 */
 
+
+/* Fixes letter spacing between F & I,L */
+body{
+	font-variant-ligatures:none;
+}
 /* Page and Containers */
 
 .tm-page {
